Ensure running DumpUtilityTest under Java 17